Bug 1900191 - use default duration if exists. r=media-playback-reviewers,karlt a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D214648